[tool.poetry]
name = "youtube"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Joris Roovers"]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.13.0"
google-auth-oauthlib = "^0.4.4"
google-auth-httplib2 = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
